finish client Code

--- a/Tracking system login/table.html
+++ b/Tracking system login/table.html
@@ -1,32 +1,22 @@
+<div class="container-table100">
+	<div class="wrap-table100">
+		<div class="table100">
+			<table id="statusTable">
+				<thead>
+					<tr class="table100-head">
+						<th class="column1">Project Name</th>
+						<th class="column2">#Samples</th>
+						<th class="column3">Start Date</th>
+						<th class="column4">End Date</th>
+						<th class="column5">Project Type</th>
+						<th class="column6">Status</th>
+					</tr>
+				</thead>
+				<tbody class="table_body">
 
-		<div class="container-table100">
-			<div class="wrap-table100">
-				<div class="table100">
-					<table>
-						<thead>
-							<tr class="table100-head">
-								<th class="column1">Project ID</th>
-								<th class="column2">#Samples</th>
-								<th class="column3">Start Date</th>
-								<th class="column4">End Date</th>
-								<th class="column5">Project Type</th>
-								<th class="column6">Status</th>
-							</tr>
-						</thead>
-						<tbody class="table_body">
-
-								<tr>
-									<td class="column1">20170918</td>
-									<td class="column2">200386</td>
-									<td class="column3">2017-09-18</td>
-									<td class="column4">2017-09-18</td>
-									<td class="column5">Collaboration</td>
-									<td class="column6">Injection</td>
-								</tr>
-
-						</tbody>
-					</table>
-				</div>
-			</div>
+				</tbody>
+			</table>
 		</div>
+	</div>
+</div>
 <script src="js/main.js"></script>
