--- a/Tracking system login/index.html
+++ b/Tracking system login/index.html
@@ -37,7 +37,7 @@
 			scale: 1.1
 		})
 	</script>
-	<script src="js/MyCode.js"></script>
+	<script src="js/main.js"></script>
 	<!--===============================================================================================-->
 </head>
 
