--- a/Tracking system login/status.html
+++ b/Tracking system login/status.html
@@ -36,22 +36,27 @@
       <div class="row justify-content-between top">
         <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/9nnc9Et.png">
           <div class="d-flex flex-column">
-            <p class="font-weight-bold">Order<br>Processed</p>
+            <p class="font-weight-bold">Receiving<br>Samples</p>
           </div>
         </div>
         <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/u1AzR7w.png">
           <div class="d-flex flex-column">
-            <p class="font-weight-bold">Order<br>Shipped</p>
+            <p class="font-weight-bold">Sample<br>Preprocessing</p>
           </div>
         </div>
         <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/TkPm63y.png">
           <div class="d-flex flex-column">
-            <p class="font-weight-bold">Order<br>En Route</p>
+            <p class="font-weight-bold">Sample<br>Injection</p>
           </div>
         </div>
         <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/HdsziHP.png">
           <div class="d-flex flex-column">
-            <p class="font-weight-bold">Order<br>Arrived</p>
+            <p class="font-weight-bold">Post<br>Analysis</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content"> <img class="icon" src="https://i.imgur.com/HdsziHP.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Finished</p>
           </div>
         </div>
       </div>
